refact: corrected styles and added links

--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,7 @@ img {
 }
 
 a:hover {
-  text-decoration-line: underline;
+  text-decoration: underline;
 }
 
 #email-error {
@@ -533,7 +533,7 @@ a:hover {
   outline: none;
 }
 
-.header-nav__input:placeholder {
+.header-nav__input::placeholder {
   color: #939699;
   font-style: normal;
   font-weight: normal;
@@ -1040,6 +1040,11 @@ a:hover {
   padding: 35px 0 13px 35px;
 }
 
+.dreamwork__card-link {
+  text-decoration: none;
+  color: #262D33;
+}
+
 .dreamwork__text {
   max-width: 238px;
 }
@@ -1073,10 +1078,6 @@ a:hover {
   color: #262D33;
 }
 
-.dreamwork__title-link {
-  text-decoration: none;
-}
-
 .dreamwork__description {
   margin-top: 0;
   margin-bottom: 49px;
@@ -1091,6 +1092,7 @@ a:hover {
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: #4B5157;
 }
 
 .dreamwork__avatar {
@@ -1135,6 +1137,11 @@ a:hover {
   padding: 0 25px 25px 25px;
 }
 
+.web-design__card-link {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
 .web-design__text {
   margin-top: 160px;
 }
@@ -1171,6 +1178,7 @@ a:hover {
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: inherit;
 }
 
 .web-design__avatar {
@@ -1248,6 +1256,7 @@ a:hover {
 
 .tools__link {
   text-decoration: none;
+  color: #262D33;
 }
 
 .other-article {
@@ -1267,6 +1276,7 @@ a:hover {
 
 .other-article__link {
   text-decoration: none;
+  color: inherit;
 }
 
 .other-article__description {
@@ -1991,7 +2001,7 @@ a:hover {
 
 .news__card {
   position: relative;
-  padding: 25px;
+  padding: 25px 25px 21px 23px;
   display: flex;
   background-color: #ffffff;
 }
@@ -2041,6 +2051,7 @@ a:hover {
 
 .news__card-link {
   text-decoration: none;
+  color: inherit;
 }
 
 .news__card-title {
@@ -2068,7 +2079,6 @@ a:hover {
 .news__card-bottom {
   margin-top: 19px;
   display: flex;
-  align-items: center;
 }
 
 .news__card-bottom_contry {
@@ -2102,6 +2112,14 @@ a:hover {
   top: 25px;
   right: 27px;
   cursor: pointer;
+}
+
+.news__card-button {
+  padding: 0;
+  border: 0;
+  background-color: inherit;
+  cursor: pointer;
+  outline: none;
 }
 
 .news__right {
@@ -2208,6 +2226,12 @@ a:hover {
   color: #4592FF;
 }
 
+.news__post-link {
+  display: flex;
+  text-decoration: none;
+  color: inherit;
+}
+
 .other-articles {
   padding: 60px 0;
   background-color: #262D33;
@@ -2303,6 +2327,11 @@ a:hover {
   width: 263px;
   background-color: #fff;
   border-radius: 10px;
+}
+
+.other-articles__card_link {
+  text-decoration: none;
+  color: inherit;
 }
 
 .other-articles__button {
@@ -2533,6 +2562,7 @@ a:hover {
   padding: 10px 15px;
   width: 314px;
   height: 40px;
+  background-color: #ffffff;
   border: 1px solid #D9DADB;
   border-radius: 5px;
   outline: none;
@@ -2860,6 +2890,9 @@ a:hover {
 }
 
 @media (max-width: 992px) {
+  a:hover {
+    text-decoration: none;
+  }
   .container {
     max-width: 700px;
   }
@@ -3016,6 +3049,9 @@ a:hover {
   .news__post-button::after {
     display: none;
   }
+  .news__post-button:hover {
+    color: #262D33;
+  }
   .other-articles__wrapper {
     flex-wrap: wrap;
   }
@@ -3040,6 +3076,12 @@ a:hover {
   .photo-slider__pagination {
     left: 50% !important;
     transform: translateX(-50%);
+  }
+  .photo-slider__button:hover {
+    background-color: #4592FF;
+  }
+  .footer__button:hover {
+    background-color: #4592FF;
   }
   .footer-grid__wrapper {
     width: 120px;
@@ -3329,20 +3371,20 @@ a:hover {
     margin-bottom: 0;
   }
   .footer-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
   }
   .footer-grid__wrapper {
-    width: 145px;
+    width: 149px;
   }
   .footer-grid__wrapper:last-child {
-    width: 145px;
-    max-width: 145px;
+    width: 149px;
+    max-width: 149px;
   }
   .footer-grid__wrapper:nth-child(2) {
-    width: 145px;
+    width: 149px;
   }
   .footer-grid__wrapper:nth-last-child(2) {
-    width: 145px;
+    width: 149px;
   }
   .footer-grid__title {
     margin-top: 15px;
@@ -3483,8 +3525,14 @@ a:hover {
     margin-top: 310px;
   }
   .tools__image {
-    height: 383px;
+    height: 401px;
     margin-top: -25px;
+  }
+  .download {
+    padding: 40px 35px 15px 35px;
+  }
+  .download__title {
+    font-size: 24px;
   }
   .social {
     padding-top: 60px;
@@ -3534,7 +3582,7 @@ a:hover {
     font-size: 26px;
   }
   .footer__form {
-    height: 200px;
+    height: 120px;
     flex-wrap: wrap;
     justify-content: center;
     align-content: space-between;
@@ -3630,6 +3678,9 @@ a:hover {
   #email-error {
     left: 50%;
     transform: translateX(-50%);
+  }
+  .footer__input {
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
