--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -186,16 +186,16 @@
           margin-bottom: 0
   .footer
     &-grid
-      grid-template-columns: 1fr
+      grid-template-columns: 1fr 1fr
       &__wrapper
-        width: 145px
+        width: 149px
         &:last-child
-          width: 145px
-          max-width: 145px
+          width: 149px
+          max-width: 149px
         &:nth-child(2)
-          width: 145px
+          width: 149px
         &:nth-last-child(2)
-          width: 145px
+          width: 149px
       &__title
         margin-top: 15px
       &__item
