--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -30,6 +30,7 @@
     padding: 10px 15px
     width: 314px
     height: 40px
+    background-color: #ffffff
     border: 1px solid #D9DADB
     border-radius: 5px
     outline: none
