--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -46,7 +46,7 @@
       background-color: #656B70
       color: #ffffff
       outline: none
-      &:placeholder
+      &::placeholder
         color: #939699
         font-style: normal
         font-weight: normal
