--- a/sass/sections/_other-articles.sass
+++ b/sass/sections/_other-articles.sass
@@ -74,6 +74,9 @@
       width: 263px
       background-color: #fff
       border-radius: 10px
+    &_link
+      text-decoration: none
+      color: inherit
   &__button
     height: 40px
     text-decoration: none
