--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -51,7 +51,7 @@ img
     color: red
 a
   &:hover
-    text-decoration-line: underline
+    text-decoration: underline
 #email-error
   position: absolute
   left: 0
