--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -42,8 +42,12 @@
       margin-top: 310px
   .tools
     &__image
-      height: 383px
+      height: 401px
       margin-top: -25px
+  .download
+    padding: 40px 35px 15px 35px
+    &__title
+      font-size: 24px
   .social
     padding-top: 60px
   .promo
@@ -82,7 +86,7 @@
       line-height: 30px
       font-size: 26px
     &__form
-      height: 200px
+      height: 120px
       flex-wrap: wrap
       justify-content: center
       align-content: space-between
