--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -93,6 +93,11 @@
       margin-left: 0
       margin-top: 0
       margin-bottom: 20px
+    &__button
+      &:hover
+        background-color: transparent
+        border: 1px solid #D9DADB
+        color: $title-color-dark
   .features
     display: none
   .promo
@@ -195,7 +200,7 @@
         &-text
           padding-top: 10px
           padding-bottom: 18px
-          width: 462px      
+          width: 462px
     &__profile
       top: -325px
       right: 50%
@@ -207,3 +212,13 @@
       margin-top: 40px
       margin-left: auto
       margin-right: auto
+    &__tags
+      &-button
+        &:hover
+          background-color: transparent
+          border: 1px solid #D9DADB
+          color: $title-color-dark
+    &__repost
+      &-button
+        &:hover
+          background-color: #4592FF
