--- a/sass/sections/_articles.sass
+++ b/sass/sections/_articles.sass
@@ -335,6 +335,10 @@
     outline: none
     &:last-child
       margin-right: 0
+    &:hover
+      background-color: #4592FF
+      border: 1px solid transparent
+      color: #ffffff
     &-text
       font-family: 'Lato-Black', sans-serif
       font-style: normal
