--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -94,3 +94,8 @@
       &__bottom
         &-text
           width: 715px
+  .more-cards
+    &__img
+      width: 224px
+    &__title
+      max-width: 224px
