--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -222,3 +222,14 @@
       &-button
         &:hover
           background-color: #4592FF
+  .more-cards
+    padding-top: 40px
+    padding-bottom: 30px
+    &__wrapper
+      flex-wrap: wrap
+    &__card
+      flex-basis: 36%
+      margin-bottom: 30px
+    &__img
+      width: 336px
+      height: 220px
