--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'sections/news'
 @import 'sections/other-articles'
 @import 'sections/footer'
+@import 'sections/more-cards'
 @import 'sections/thanks'
 @import 'media/media-1250'
 @import 'media/media-1200'
