--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -263,3 +263,15 @@
         &_next
           background-size: 40px
           right: 0
+  .more-cards
+    &__wrapper
+      flex-direction: column
+    &__card
+      flex-basis: 100%
+      &:last-child
+        margin-bottom: 0
+    &__img
+      width: 100%
+      height: 270px
+    &__title
+      max-width: 100%
