--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,7 @@
 @import 'sections/other-articles'
 @import 'sections/footer'
 @import 'sections/more-cards'
+@import 'sections/comments'
 @import 'sections/thanks'
 @import 'media/media-1250'
 @import 'media/media-1200'
