--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -62,3 +62,16 @@ a
   font-weight: normal
   font-size: 14px
   line-height: 20px
+.comments-button
+  padding: 10px 20px
+  font-family: 'Lato-Black', sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 14px
+  line-height: 20px
+  background-color: transparent
+  color: $title-color-dark
+  border: 1px solid #D9DADB
+  border-radius: 20px
+  cursor: pointer
+  outline: none
