--- a/sass/sections/_comments.sass
+++ b/sass/sections/_comments.sass
@@ -32,7 +32,8 @@
     display: flex
     text-decoration: none
     &-bottom
-      margin-top: 30px
+      margin-top: 2px
+      min-height: 48px
       display: flex
       flex-basis: 100%
       justify-content: center
@@ -43,6 +44,7 @@
       font-size: 14px
       line-height: 20px
     &-icon
+      margin-left: 26px
       margin-right: 7px
       width: 15px
       height: 15px
@@ -130,3 +132,57 @@
     &-link
       text-decoration: none
       color: $title-color-dark
+.comment-block
+  padding: 30px 40px 35px 30px
+  margin-top: 60px
+  width: 750px
+  display: flex
+  align-items: center
+  background-color: #F5F5F5
+  border-radius: 10px
+  &__avatar
+    margin-bottom: 70px
+    margin-right: 10px
+    width: 75px
+    height: 75px
+    object-fit: cover
+    border-radius: 50%
+  &__form
+    position: relative
+    &-title
+      margin-top: 0
+      margin-bottom: 15px
+      margin-left: 10px
+      font-family: 'Roboto Slab', serif
+      font-style: normal
+      font-weight: bold
+      font-size: 20px
+      line-height: 25px
+      color: $title-color-dark
+    &-message
+      position: absolute
+      width: 560px
+      height: 110px
+      left: 23px
+      top: 50px
+      border: none
+      resize: none
+      outline: none
+    &-button
+      padding-left: 16px
+      padding-right: 16px
+      min-width: 137px
+      margin-top: 13px
+      margin-left: 13px
+      font-family: 'Lato-Black', sans-serif
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 20px
+      border: none
+      cursor: pointer
+      outline: none
+    &-icon
+      margin-left: 5px
+      width: 20px
+      height: 20px
