create: added responsive for comments section

--- a/sass/media/_media-386.sass
+++ b/sass/media/_media-386.sass
@@ -5,4 +5,14 @@
   .footer
     &__input
       margin-bottom: 10px
+  .comment-block
+    &__avatar
+      margin-bottom: 69px
+    &__form
+      &-title
+        text-align: center
+        max-width: 190px
+      &-message
+        top: 76px
+        left: 15px
   
