--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -161,3 +161,10 @@
   .more-cards
     &__img
       height: 200px
+  .comment-block
+    padding: 15px 10px 20px 10px
+    &__form
+      &-title
+        font-size: 16px
+      &-message
+        width: 89%
