--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -233,3 +233,12 @@
     &__img
       width: 336px
       height: 220px
+  .comments
+    &-container
+      max-width: 700px
+  .comment-block
+    width: 650px
+    &__form
+      &-message
+        width: 460px
+        height: 87px
