--- a/css/style.css
+++ b/css/style.css
@@ -954,7 +954,7 @@ a:hover {
 .main-display__flag {
   position: absolute;
   top: 152px;
-  left: 117px;
+  left: 118px;
 }
 
 .articles {
@@ -3049,6 +3049,7 @@ a:hover {
   height: 110px;
   left: 23px;
   top: 50px;
+  background-color: #ffffff;
   border: none;
   resize: none;
   outline: none;
@@ -3099,8 +3100,10 @@ a:hover {
   text-decoration: none;
 }
 
-.main-display__flag {
-  left: 75px;
+@media (max-width: 1250px) {
+  .main-display__flag {
+    left: 75px;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -3512,6 +3515,16 @@ a:hover {
     width: 336px;
     height: 220px;
   }
+  .comments-container {
+    max-width: 700px;
+  }
+  .comment-block {
+    width: 650px;
+  }
+  .comment-block__form-message {
+    width: 460px;
+    height: 87px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -3854,6 +3867,27 @@ a:hover {
   .more-cards__title {
     max-width: 100%;
   }
+  .comments-container {
+    max-width: 576px;
+    width: 92%;
+  }
+  .comment-block {
+    max-width: 576px;
+    width: 100%;
+  }
+  .comment-block__avatar {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 95px;
+  }
+  .comment-block__form-bg {
+    height: 170px;
+  }
+  .comment-block__form-message {
+    max-width: 91%;
+    width: 100%;
+    height: 150px;
+  }
 }
 
 @media (max-width: 568px) {
@@ -4056,6 +4090,15 @@ a:hover {
   .more-cards__img {
     height: 200px;
   }
+  .comment-block {
+    padding: 15px 10px 20px 10px;
+  }
+  .comment-block__form-title {
+    font-size: 16px;
+  }
+  .comment-block__form-message {
+    width: 89%;
+  }
 }
 
 @media (max-width: 386px) {
@@ -4065,6 +4108,17 @@ a:hover {
   }
   .footer__input {
     margin-bottom: 10px;
+  }
+  .comment-block__avatar {
+    margin-bottom: 69px;
+  }
+  .comment-block__form-title {
+    text-align: center;
+    max-width: 190px;
+  }
+  .comment-block__form-message {
+    top: 76px;
+    left: 15px;
   }
 }
 /*# sourceMappingURL=style.css.map */
