--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -275,3 +275,21 @@
       height: 270px
     &__title
       max-width: 100%
+  .comments
+    &-container
+      max-width: 576px
+      width: 92%
+  .comment-block
+    max-width: 576px
+    width: 100%
+    &__avatar
+      width: 50px
+      height: 50px
+      margin-bottom: 95px
+    &__form
+      &-bg
+        height: 170px
+      &-message
+        max-width: 91%
+        width: 100%
+        height: 150px
