--- a/sass/sections/_comments.sass
+++ b/sass/sections/_comments.sass
@@ -165,6 +165,7 @@
       height: 110px
       left: 23px
       top: 50px
+      background-color: #ffffff
       border: none
       resize: none
       outline: none
