--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -75,3 +75,13 @@ a
   border-radius: 20px
   cursor: pointer
   outline: none
+#message-error
+  position: absolute
+  bottom: 40px
+  left: 15px
+  color: red
+  font-family: 'Lato-Black', sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 20px
