--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -86,6 +86,7 @@
       line-height: 30px
       font-size: 26px
     &__form
+      padding-bottom: 20px
       height: 120px
       flex-wrap: wrap
       justify-content: center
@@ -106,7 +107,8 @@
         &:nth-last-child(-n+2)
           margin-bottom: 0
   #email-error
-    left: 10px
+    left: 50px
+    top: 40px
   .main-display
     &__top
       flex-direction: column
