--- a/sass/sections/_article.sass
+++ b/sass/sections/_article.sass
@@ -198,13 +198,15 @@
       color: $text-color-dark
     &-bottom
       display: flex
-      align-items: center
       &-icon
         width: 15px
         height: 15px
         margin-right: 5px
       &-numbers
         margin-right: 10px
+    &-link
+      text-decoration: none
+      color: inherit
   &__repost
     padding: 30px 0
     margin-left: 5px
