--- a/sass/sections/_main-display.sass
+++ b/sass/sections/_main-display.sass
@@ -7,6 +7,18 @@
   background-size: cover
   background-position: center
   z-index: 99
+  &_2
+    background: url(../img/article/card-photo.png)
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center
+    z-index: 99
+  &_3
+    background: url(../img/news/photo-large-4.png)
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center
+    z-index: 99
   &::after
     position: absolute
     top: 0
@@ -103,3 +115,4 @@
     position: absolute
     top: 152px
     left: 118px
+    cursor: pointer
