create: added up-button and compressed photo

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -85,3 +85,18 @@ a
   font-weight: normal
   font-size: 12px
   line-height: 20px
+.up-button
+  display: none
+  position: fixed
+  right: 10px
+  bottom: 20px
+  padding: 15px 20px 15px 20px
+  border-radius: 50%
+  background-color: #4592FF
+  border: none
+  color: #ffffff
+  cursor: pointer
+  outline: none
+  z-index: 999
+.shown
+  display: inline-block
