--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,25 @@ a:hover {
   line-height: 20px;
 }
 
+.up-button {
+  display: none;
+  position: fixed;
+  right: 10px;
+  bottom: 20px;
+  padding: 15px 20px 15px 20px;
+  border-radius: 50%;
+  background-color: #4592FF;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  outline: none;
+  z-index: 999;
+}
+
+.shown {
+  display: inline-block;
+}
+
 .header {
   background-color: #262D33;
   padding: 15px 0;
@@ -1019,7 +1038,7 @@ a:hover {
   position: relative;
   grid-column: 3/4;
   grid-row: 1/3;
-  background: url(../img/articles/web-design-bg.jpg);
+  background: url(../img/articles/web-design-bg-1.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -4133,6 +4152,12 @@ a:hover {
   }
   .comment-block__form-message {
     width: 89%;
+  }
+  .up-button {
+    padding: 5px 10px 5px 10px;
+    right: 50%;
+    bottom: 10px;
+    transform: translateX(50%);
   }
 }
 
