--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -170,3 +170,8 @@
         font-size: 16px
       &-message
         width: 89%
+  .up-button
+    padding: 5px 10px 5px 10px
+    right: 50%
+    bottom: 10px
+    transform: translateX(50%)
