--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -100,3 +100,11 @@ a
   z-index: 999
 .shown
   display: inline-block
+.heart
+  color: #BCBFC2
+  background-color: transparent
+  border: none
+  outline: none
+  cursor: pointer
+  &_active
+    color: $primary
