--- a/sass/sections/_article.sass
+++ b/sass/sections/_article.sass
@@ -198,6 +198,11 @@
       color: $text-color-dark
     &-bottom
       display: flex
+      &-link
+        margin-right: 5px
+        color: #BCBFC2
+        &:hover
+          color: $primary
       &-icon
         width: 15px
         height: 15px
