--- a/sass/sections/_main-info.sass
+++ b/sass/sections/_main-info.sass
@@ -94,6 +94,9 @@
   &__button
     max-width: 200px
     text-decoration: none
+    &:hover
+      background-color: #3387FF
+      text-decoration: none
   &__right
     display: flex
     flex-direction: column
