--- a/sass/sections/_more-cards.sass
+++ b/sass/sections/_more-cards.sass
@@ -25,6 +25,12 @@
   &__link
     text-decoration: none
     color: $title-color-dark
+  &__icon
+    &-link
+      margin-right: 5px
+      color: #BCBFC2
+      &:hover
+        color: $primary
   &__bottom
     display: flex
     &-icon
