--- a/sass/sections/_other-articles.sass
+++ b/sass/sections/_other-articles.sass
@@ -74,12 +74,17 @@
       width: 263px
       background-color: #fff
       border-radius: 10px
+      &:hover
+        background-color: #eeeeee
     &_link
       text-decoration: none
       color: inherit
   &__button
     height: 40px
     text-decoration: none
+    &:hover
+      text-decoration: none
+      background-color: #3387FF
     &-text
       margin-right: 5px
       max-width: 120px
