--- a/sass/sections/_promo.sass
+++ b/sass/sections/_promo.sass
@@ -35,3 +35,6 @@
     max-width: 200px
     margin: auto
     text-decoration: none
+    &:hover
+      background-color: #3387FF
+      text-decoration: none
