--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -27,9 +27,9 @@
       max-width: 200px
     &__description
       margin-bottom: 10px
-    &__link
+    &__wrapper
       margin-top: 43px
-      max-width: 300px
+      max-width: 400px
       flex-wrap: wrap
     &__comment
       margin-right: 20px
