--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -37,6 +37,9 @@
         padding-bottom: 19px
       &:nth-child(6)
         padding-bottom: 19px
+    &__button
+      &:hover
+        background-color: $primary
   .articles
     padding-top: 100px
     padding-bottom: 40px
@@ -71,19 +74,26 @@
         grid-column: 1/7
   .dreamwork
     padding-top: 35px
+    &__link
+      &:hover
+        color: #BCBFC2
   .web-design
     &__text
       margin-top: 179px
     &__avatar
       width: 30px
       height: 30px
+    &__link
+      &:hover
+        color: #BCBFC2
   .other-article
     &__description
       &_free
         margin-bottom: 12px
   .download
-    &__wrapper
-      padding-top: 15px
+    &__button
+      &:hover
+        background-color: #3BBDC4
   .tags
     &::after
       top: 39px
@@ -134,6 +144,17 @@
           display: none
         &:hover
           color: $title-color-dark
+    &__card
+      &:hover
+        background-color: #fff
+      &-bottom
+        &-link
+          &:hover
+            color: #BCBFC2
+  .promo
+    &__button
+      &:hover
+        background-color: $primary
   .other-articles
     &__wrapper
       flex-wrap: wrap
@@ -147,6 +168,11 @@
       &_small
         max-width: 340px
         width: 100%
+        &:hover
+          background-color: #fff
+    &__button
+      &:hover
+        background-color: $primary
   .photo-slider
     margin-bottom: 30px
     max-width: 700px
@@ -188,6 +214,10 @@
       font-size: 42px
     &__flag
       left: 92%
+    &__bottom
+      &-link
+        &:hover
+          color: #BCBFC2
   .article
     padding-top: 280px
     &-container
@@ -212,6 +242,10 @@
       margin-top: 40px
       margin-left: auto
       margin-right: auto
+      &-bottom
+        &-link
+          &:hover
+            color: #BCBFC2
     &__tags
       &-button
         &:hover
@@ -233,6 +267,10 @@
     &__img
       width: 336px
       height: 220px
+    &__icon
+      &-link
+        &:hover
+          color: #BCBFC2
   .comments
     &-container
       max-width: 700px
