--- a/sass/sections/_articles.sass
+++ b/sass/sections/_articles.sass
@@ -89,6 +89,7 @@
     text-transform: uppercase
   &__title
     margin-top: 20px
+    margin-bottom: 23px
     font-family: 'Roboto Slab', serif
     font-style: normal
     font-weight: bold
@@ -102,7 +103,7 @@
     font-weight: normal
     font-size: 14px
     line-height: 20px
-  &__link
+  &__wrapper
     margin-top: 15px
     display: flex
     align-items: center
@@ -132,6 +133,12 @@
       max-width: 30px
       overflow: hidden
       text-overflow: ellipsis
+  &__link
+    margin-right: 5px
+    fill: #BCBFC2
+    color: #BCBFC2
+    &:hover
+      color: #4592FF
   &__icon
     margin-right: 5px
     width: 15px
@@ -166,11 +173,17 @@
     color: $text-color-light
     &-link
       text-decoration: none
-  &__link
+  &__wrapper
     display: flex
     align-items: center
     text-decoration: none
     color: inherit
+  &__link
+    color: #BCBFC2
+    &:hover
+      color: $primary
+  &__button
+    padding: 0
   &__avatar
     margin-right: 10px
     width: 45px
@@ -258,14 +271,14 @@
   position: relative
   padding: 25px 25px 13px 25px
   background-color: #3BBDC4
-  &::after
-    position: absolute
-    bottom: 45px
-    left: 0
-    content: ''
-    width: 263px
-    height: 1px
-    background-color: #96E2E3
+  // &::after
+  //   position: absolute
+  //   bottom: 45px
+  //   left: 0
+  //   content: ''
+  //   width: 263px
+  //   height: 1px
+  //   background-color: #96E2E3
   &__text
     margin-bottom: 19px
   &__title
@@ -283,12 +296,29 @@
     font-size: 14px
     line-height: 20px
     color: #C1F4F5
-  &__wrapper
+  &__button
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
+    width: 100%
+    height: 45px
     display: flex
-    align-items: center
     justify-content: center
-    padding-top: 12px
+    align-items: center
+    color: #ffffff
+    font-family: 'Lato-Black', sans-serif
+    font-style: normal
+    font-weight: normal
+    font-size: 14px
+    line-height: 20px
+    border: none
+    border-top: 1px solid #96E2E3
+    background-color: #3BBDC4
     cursor: pointer
+    outline: none
+    &:hover
+      background-color: $primary
   &__icon
     width: 20px
     height: 20px
@@ -401,3 +431,6 @@
   &__img
     width: 65px
     height: 65px
+  &__link
+    text-decoration: none
+    color: inherit
