--- a/sass/sections/_news.sass
+++ b/sass/sections/_news.sass
@@ -15,6 +15,8 @@
     padding: 25px 25px 21px 23px
     display: flex
     background-color: #ffffff
+    &:hover
+      background-color: #eeeeee
     &::after
       position: absolute
       bottom: 0
@@ -69,7 +71,13 @@
       margin-top: 19px
       display: flex
       &_contry
+        display: flex
         margin-top: 42px
+      &-link
+        margin-right: 5px
+        color: #BCBFC2
+        &:hover
+          color: $primary
     &-date
       margin-right: 12px
       &_contry
@@ -88,6 +96,7 @@
       right: 27px
       cursor: pointer
     &-button
+      margin-right: 5px
       padding: 0
       border: 0
       background-color: inherit
