--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -108,3 +108,11 @@ a
   cursor: pointer
   &_active
     color: $primary
+.like
+  color: #BCBFC2
+  &_active
+    color: #3DC47E
+.dislike
+  color: #BCBFC2
+  &_active
+    color: #FF4F52
