--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -274,9 +274,16 @@
   .comments
     &-container
       max-width: 700px
+    &__bottom
+      &-icon
+        &:hover
+          color: #BCBFC2
   .comment-block
     width: 650px
     &__form
       &-message
         width: 460px
         height: 87px
+      &-button
+        &:hover
+          background-color: $primary
