--- a/sass/sections/_comments.sass
+++ b/sass/sections/_comments.sass
@@ -31,6 +31,11 @@
     margin-bottom: 30px
     display: flex
     text-decoration: none
+    &:hover
+      background-color: $primary
+      text-decoration: none
+      border: 1px solid transparent
+      color: #ffffff
     &-bottom
       margin-top: 2px
       min-height: 48px
@@ -43,6 +48,11 @@
       font-weight: normal
       font-size: 14px
       line-height: 20px
+      &:hover
+        background-color: $primary
+        text-decoration: none
+        border: 1px solid transparent
+        color: #ffffff
     &-icon
       margin-left: 26px
       margin-right: 7px
@@ -108,6 +118,9 @@
       margin-right: 5px
       width: 15px
       height: 15px
+      color: #BCBFC2
+      &:hover
+        color: $primary
       &_mr-10
         margin-right: 10px
     &-text
@@ -124,6 +137,7 @@
       &_red
         color: #FF4F52
     &-button
+      margin-right: 10px
       padding: 0
       border: none
       background-color: transparent
@@ -183,6 +197,8 @@
       border: none
       cursor: pointer
       outline: none
+      &:hover
+        background-color: #3387FF
     &-icon
       margin-left: 5px
       width: 20px
